[package]
name = "keithley-2230-series"
version = "0.2.0"
edition = "2021"
description = "Keithley 2230 Series Instruments API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visa-api = "0.2.1"
thiserror = "1.0.50"
strum = { version = "0.25.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
